Feature/1.17.1 (#3)
* Initial work for 1.17.1

* Revert "Minor cleanup"

This reverts commit fdd954f6eb5f17a87a1a2031a8ce26ed03a83b8f.

* Call it a day and make it compile

* Sort out minor nbt issues

* Fixes https://github.com/IntellectualSites/FastAsyncWorldEdit/issues/1171

* Fix setting light
(hopefully)

Co-authored-by: SirYwell <hannesgreule@outlook.de>